--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Categories"
-    url: #https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    url: "/categories/"#https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: "/about/"
   # - title: "About"
