--- a/_config.yml
+++ b/_config.yml
@@ -276,10 +276,11 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: true
       share: true
       related: true
+      show_date: true
 
   # _pages
   - scope:
@@ -292,3 +293,4 @@ defaults:
       comments: false
       share: true
       related: false
+      show_date: true
