update read time to date

--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "Sadowbass(유승철)"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "언젠간 뭐라도 되지 않겠습니다"
+  bio              : "언젠간 뭐라도 되지 않겠습니까"
   location         : "경기도"
   email            : "shinwa46@gmail.com"
   links:
