--- a/_config.yml
+++ b/_config.yml
@@ -281,6 +281,7 @@ defaults:
       share: true
       related: true
       show_date: true
+      date_format: "%Y-%m-%d"
 
   # _pages
   - scope:
@@ -294,3 +295,4 @@ defaults:
       share: true
       related: false
       show_date: true
+      date_format: "%Y-%m-%d"
