delete some posts, write new blog posts

--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   name             : "Sadowbass(유승철)"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "언젠간 뭐라도 되지 않겠습니까"
-  location         : "경기도"
+  location         : "경기도 광주시"
   email            : "shinwa46@gmail.com"
   links:
     - label: "Email"
